--- a/test/test.org
+++ b/test/test.org
@@ -12,3 +12,7 @@
   SCHEDULED: <2013-10-17 周四>
 ** Test_10
    SCHEDULED: <2013-10-17 周四>
+   - Note taken on [2013-10-29 Tue 07:40] \\
+     note for entry Test_1
+
+
