--- a/tm/tm.org
+++ b/tm/tm.org
@@ -1,3 +1,5 @@
+
+
 * DONE DuDu Test PLAGame Version intranet pass to DuDu Collegues<2013-10-22 Tue>
 * DONE Server version 20130917R1 First Deployment on BJ01<2013-10-22 Tue>
 * TODO 360 real client_id test
@@ -15,8 +17,40 @@
 * DONE dudu server problem start match
 * DONE New version to test on BJ
   
-
 * TODO VersionPrepare batch file
+  SCHEDULED: <2013-11-07 Thu>
+  
 * TODO orgnize server list
+  SCHEDULED: <2013-11-07 Thu>
+
+* TODO superhost01 deploy a version 4 youcheng.
+  SCHEDULED: <2013-11-08 Fri>
+
+* TODO DSA problemReport 5 types
+
+
+* TODO [2013-11-08 Fri]
+** DONE OnFirstNotification not use oneway
+   SCHEDULED: <2013-11-08 Fri>
+** TODO Launcher DuDu
+   SCHEDULED: <2013-11-08 Fri>
+ 
+* TODO 360version finance log format verify.
+  SCHEDULED: <2013-11-13 Wed>
+
+
+** TODO [2013-11-08 Fri](周五 出个版本) 或者11.11(周一) 王天耀部署测试Launcher, 版本部署到北京机房,国安机房全部流程 测试内容:1.Dudu 2.360帐号
+
+** TODO [2013-11-14 Thu](周四)(电信)南3, 南4合服
+
+** TODO [2013-11-15 Fri](周五)(电信)广1, 广2合服
+
+** TODO [2013-11-15 Fri](周五)封版本 部署到北京机房, 国安机房全部流程
+
+** TODO [2013-11-18 Mon](周一)合服成电信一个区:(南4,南3,南2,南1,广2,广1) , 网通一个区:(北3,北2,北1)
+
+** TODO [2013-11-18 Mon](周一) 南一数据拉到北京或者国安其中一个区, 测试内容
+
+** TODO [2013-11-20 Wed](周三)一天  停线上真如电信, 南汇网通, 南汇电信, 全部部署上封的版本.
 
   
