--- a/tm/tm.org
+++ b/tm/tm.org
@@ -34,52 +34,84 @@
   SCHEDULED: <2013-11-13 Wed>
 
 
-* TODO orgnize server list
-  SCHEDULED: <2013-11-07 Thu>  
-
 ** DONE [2013-11-08 Fri](周五 出个版本) 或者11.11(周一) 王天耀部署测试Launcher, 版本部署到北京机房,国安机房全部流程 测试内容:1.Dudu 2.360帐号
 
 ** DONE [2013-11-14 Thu](周四)(电信)南3, 南4合服
 
-** TODO [2013-11-15 Fri](周五)(电信)广1, 广2合服
+** DONE [2013-11-15 Fri](周五)(电信)广1, 广2合服
 
 ** DONE [2013-11-15 Fri](周五)封版本 部署到北京机房, 国安机房全部流程
 
 ** DONE [2013-11-18 Mon]网通一个区:(北3,北2,北1)
 
-** TODO [2013-11-18 Mon](周一)合服成电信一个区(南2):(南4,南3,南2,南1,广2,广1)  
+** DONE [2013-11-18 Mon](周一)合服成电信一个区(南2):(南4,南3,南2,南1,广2,广1)  
 
-** TODO [2013-11-18 Mon](周一) 南一数据拉到北京或者国安其中一个区, 测试内容
+** DONE [2013-11-18 Mon](周一) 南一数据拉到北京或者国安其中一个区, 测试内容
 
-** TODO [2013-11-20 Wed](周三)一天  停线上真如电信, 南汇网通, 南汇电信, 全部部署上封的版本.
+** DONE [2013-11-20 Wed](周三)一天  停线上真如电信, 南汇网通, 南汇电信, 全部部署上封的版本.
 
 
 
-** TODO patch_tools add 2 features
-   SCHEDULED: <2013-12-13 Fri>
-   1. clean history
-   2. assign update version
-
-* TODO List Order By Date
-** [2013-11-15 Fri] Todo List
+* List Order By Date
+** [2013-11-15 Fri]  List
 *** DONE 1. 360 Account Version Dudu
 *** DONE 2. 20131115R1 Version
-** [2013-11-18 Mon] Todo List
+** [2013-11-18 Mon]  List
 *** DONE 1. HP Compiant Win8.1 version
 *** DONE 2. 20131118R1 New Version 2 Deploy
-** [2013-11-19 Tue] Todo List
+** [2013-11-19 Tue]  List
 *** DONE 1. Amazon Server Verify
 *** DONE 2. New Version 20131119R1 2 Deploy
-** [2013-11-20 Wed] Todo List
+** [2013-11-20 Wed]  List
 *** DONE 1. 20131120R1 New Version 2 Deploy 
-*** TODO 2. PLAOnline 安装包
+*** DONE 2. PLAOnline 安装包
 *** DONE 3. 整理服务器列表
-** [2013-11-21 Thu] Todo List
-*** TODO 1. PLAOnline 安装包
-*** TODO 2. 服务器列表梳理
-** [2013-11-22 Fri] Todo List
-*** TODO 1. 根据产品要求更新官网服务器 Pending
+** [2013-11-21 Thu]  List
+*** DONE 1. PLAOnline 安装包
+*** DONE 2. 服务器列表梳理
+** [2013-11-22 Fri]  List
+*** DONE 1. 根据产品要求更新官网服务器 Pending
     
 ** [2013-11-25 Mon]    
-*** TODO 1. 更新新版本 grsm_split_charaStat_service.sql
-*** TODO 2. 更新新版本 导数据库    
+*** DONE 1. 更新新版本 grsm_split_charaStat_service.sql Pending
+*** DONE 2. 更新新版本 导数据库 Pending
+
+** [2013-11-25 Mon]  List
+*** DONE 1. Ice Gate Node 分离
+** [2013-11-26 Tue]  List
+*** DONE 1. 多Gate
+** [2013-11-27 Wed]  List
+*** DONE 1. 9:30AM-1:30PM 官网停服 更新版本 20131125R1 (1.确认数据库, 2.确认xml)
+*** TODO 2. 208 Gate DNSException
+** [2013-11-28 Thu]  List
+*** DONE 1. 多Gate内网QA环境
+*** DONE 2. 360 mysql qid(int(10)) versus java int
+** [2013-12-02 Mon]  List
+*** DONE 1. 听雨阁光荣使命外挂
+** [2013-12-03 Tue]  List
+*** TODO 1. Ice-3.4.2 patch
+*** DONE 2. Gate env on 11
+*** DONE 3. HP反馈一个错误 不同版本的HP同时运行 
+** [2013-12-04 Wed]  List
+*** DONE 1. update official servers at 9AM-12AM.
+*** TODO 2. Ice-3.4.2 glacier2router update to 360 servers.
+*** DONE 3. 内网多Gate for QA ENV
+
+** [2013-12-05 Thu] List
+*** DONE 1. Client.Size 90
+*** DONE 2. 360 GM
+*** DONE 3. 听雨阁外挂验证
+    
+** [2013-12-06 Fri] List
+*** DONE 1. 内网360版本进游戏问题
+*** DONE 2. 线上ice_oneway()
+
+** [2013-12-09 Mon] List
+*** DONE 1. 内网多Gate 4 QA ENV
+** [2013-12-10 Tue] List
+*** DONE 1. 多Node(1/3天)
+*** DONE 2. 1-3分钟 HP
+** [2013-12-11 Wed] List
+*** TODO 1. 多Node(2/3天)
+*** DONE 2. 1-3分钟 HP更新到比赛服DX服    
+*** DONE 3. RUS 新版本制作
