--- a/tm/tm.org
+++ b/tm/tm.org
@@ -112,6 +112,32 @@
 *** DONE 1. 多Node(1/3天)
 *** DONE 2. 1-3分钟 HP
 ** [2013-12-11 Wed] List
-*** TODO 1. 多Node(2/3天)
-*** DONE 2. 1-3分钟 HP更新到比赛服DX服    
-*** DONE 3. RUS 新版本制作
+*** DONE 1. 1-3分钟 HP更新到比赛服DX服    
+*** DONE 2. RUS 新版本制作
+
+** [2013-12-23 Mon] List
+*** DONE 1. 多Node(2/3天)
+
+** [2013-12-24 Tue] List
+*** DONE 1. dudu 未登录, 匹配游戏起不来
+
+** [2013-12-25 Wed] List
+*** DONE 1. Gate 状态统计(1/3)
+** [2013-12-26 Thu] List
+*** TODO 1. Gate 状态统计(2/3)
+
+
+
+** [2014-01-05 Sun] List
+*** DONE 1. Gate Status to Platform interface
+
+** [2014-01-06 Mon] List
+*** DONE 1. Web Service to Platform
+*** DONE 2. Fix Mail 8days ref: BugFree 2172
+*** TODO 3. investigate dudu unsteabe game server logic failed(0/2)
+
+** [2014-01-07 Tue] List
+*** DONE 1. investigate dudu unsteabe game server logic failed(2/2) :self verify
+*** TODO 2. dudu service restore, dudu service failed to login dudu
+    
+    
