--- a/tm/tm.org
+++ b/tm/tm.org
@@ -142,5 +142,9 @@
 
 ** [2014-01-09 Thu] List
 *** DONE 1. dudu server restore, dudu service failed to login dudu(2/2)
+
+** [2014-01-10 Fri] List
+*** DONE 1. DSA 对应多DC--内网多DC环境
+*** TODO 2. DSA 对应多DC--
     
     
