1.openssl RC4 protobuf 2.glibc_test

--- a/adam/xnet/README
+++ b/adam/xnet/README
@@ -8,4 +8,6 @@
 
 3.防御性原则,网络连接,协议数据异常应对. 
 
-4.学习作用, 最终提取设计先c语言实现, 然后C++, Erlang, Go, Python实现.学习不同语言的特性, 发挥不同语言的特性. 
+4.父子进程模式而不是多线程模式(c,c++容易core dump, 父子进程模式, 子进程dump, 父进程可重启子进程)--学习用版多线程模式(仅学习用, 理论性能更高, 但是core dump没有父子进程模式稳定).
+
+4.学习作用, 最终提取设计先c语言实现, 然后C++, Erlang, Go, Python实现.学习不同语言的特性, 发挥不同语言的特性.
